--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router": "^7.1.0",
+    "react-router-dom": "^7.1.0",
     "react-use": "^17.6.0",
     "swiper": "^11.1.15",
     "three": "^0.171.0"
