--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.17.10",
+    "@studio-freight/react-lenis": "^0.0.47",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
