--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.17.10",
+    "@reduxjs/toolkit": "^2.6.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "gsap": "^3.12.5",
     "lenis": "^1.1.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.0",
     "react-router-dom": "^7.2.0",
     "react-use": "^17.6.0",
