--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/noto-sans": "^5.2.5",
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.6.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "gsap": "^3.12.5",
+    "html-react-parser": "^5.2.2",
     "lenis": "^1.1.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
